Geoip processor implementation
Signed-off-by: Asif Sohail Mohammed <nsifmoh@amazon.com>